Added RadianceOfXAndYAndZAndThetaAndPhiDetector and went through steps on codeplex site to add it everywhere. I have one unit test so far that integrates the result over theta and phi and verifies that it euqals FluenceOfXAndYAndZ. It currently only works for analog and DAW.  There is already a check in SimulationInputValidation to flag if CAW together with this detector is inadvertently specified.  I added a unit test that tries to do just this and verifies that SIValidation catches it. I added this detector to SimulationInputProvider PointSourceOneLayerTissueAllDetectors to that MCCL has an example schema. Also changed x,y binning in R_xy unit tests and updated R_xy results to match linux.

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -593,6 +593,9 @@
     <Compile Include="..\Vts\MonteCarlo\DataStructures\DetectorInputs\RadianceOfRhoDetectorInput.cs">
       <Link>MonteCarlo\DataStructures\DetectorInputs\RadianceOfRhoDetectorInput.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\DataStructures\DetectorInputs\RadianceOfXAndYAndZAndThetaAndPhiDetectorInput.cs">
+      <Link>MonteCarlo\DataStructures\DetectorInputs\RadianceOfXAndYAndZAndThetaAndPhiDetectorInput.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\DataStructures\DetectorInputs\RDiffuseDetectorInput.cs">
       <Link>MonteCarlo\DataStructures\DetectorInputs\RDiffuseDetectorInput.cs</Link>
     </Compile>
@@ -769,6 +772,9 @@
     </Compile>
     <Compile Include="..\Vts\MonteCarlo\Detectors\RadianceOfRhoDetector.cs">
       <Link>MonteCarlo\Detectors\RadianceOfRhoDetector.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Detectors\RadianceOfXAndYAndZAndThetaAndPhiDetector.cs">
+      <Link>MonteCarlo\Detectors\RadianceOfXAndYAndZAndThetaAndPhiDetector.cs</Link>
     </Compile>
     <Compile Include="..\Vts\MonteCarlo\Detectors\RDiffuseDetector.cs">
       <Link>MonteCarlo\Detectors\RDiffuseDetector.cs</Link>
