--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -223,6 +223,7 @@
     <Compile Include="MonteCarlo\Controllers\VirtualBoundaryController.cs" />
     <Compile Include="MonteCarlo\DataStructuresValidation\PostProcessorInputs\PostProcessorInputValidation.cs" />
     <Compile Include="MonteCarlo\DataStructuresValidation\TissueInputs\SingleEllipsoidTissueInputValidation.cs" />
+    <Compile Include="MonteCarlo\DataStructures\DetectorInputs\ReflectedMTOfRhoAndSubRegionHistDetectorInput.cs" />
     <Compile Include="MonteCarlo\DataStructures\DetectorInputs\RadianceOfXAndYAndZAndThetaAndPhiDetectorInput.cs" />
     <Compile Include="MonteCarlo\DataStructures\DetectorInputs\pMCROfFxAndTimeDetectorInput.cs" />
     <Compile Include="MonteCarlo\DataStructures\DetectorInputs\pMCROfFxDetectorInput.cs" />
@@ -458,7 +459,7 @@
     <Compile Include="MonteCarlo\Detectors\AOfRhoAndZDetector.cs" />
     <Compile Include="MonteCarlo\Detectors\ATotalDetector.cs" />
     <Compile Include="MonteCarlo\Detectors\FluenceOfRhoAndZAndTimeDetector.cs" />
-    <Compile Include="MonteCarlo\Detectors\MomentumTransferOfRhoAndZDetector.cs" />
+    <Compile Include="MonteCarlo\Detectors\ReflectedMTOfRhoAndSubRegionHistDetector.cs" />
     <Compile Include="MonteCarlo\Detectors\FluenceOfRhoAndZDetector.cs" />
     <Compile Include="MonteCarlo\Detectors\pMCROfRhoAndTimeDetector.cs" />
     <Compile Include="MonteCarlo\Detectors\pMCROfRhoDetector.cs" />
