--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -185,12 +185,22 @@
     <Compile Include="Common\Stopwatch.cs" />
     <Compile Include="FemModeling\MGRTE\2D\BoundaryCoupling.cs" />
     <Compile Include="FemModeling\MGRTE\2D\DataStructures\DetectorInputs\FluenceOfXAndZDectectorInput.cs" />
-    <Compile Include="FemModeling\MGRTE\2D\DataStructures\MeshInputs\MeshDataInput.cs" />
-    <Compile Include="FemModeling\MGRTE\2D\DataStructures\MeshInputs\MeshSimulationInput.cs" />
+    <Compile Include="FemModeling\MGRTE\2D\DataStructures\MeshInputs\AngularMesh.cs" />
+    <Compile Include="FemModeling\MGRTE\2D\DataStructures\MeshInputs\MeshSimulationOptions.cs" />
+    <Compile Include="FemModeling\MGRTE\2D\DataStructures\MeshInputs\SpatialMesh.cs" />
+    <Compile Include="FemModeling\MGRTE\2D\DataStructures\MeshInputs\SquareMeshDataInput.cs" />
     <Compile Include="FemModeling\MGRTE\2D\DataStructures\TissueInputs\MultiLayerTissueInput.cs" />
     <Compile Include="FemModeling\MGRTE\2D\DataStructures\SimulationInputs.cs" />
+    <Compile Include="FemModeling\MGRTE\2D\DataStructures\TissueInputs\SingleInclusionInput.cs" />
+    <Compile Include="FemModeling\MGRTE\2D\DataStructures\Tissues\InclusionLayerRegion.cs" />
+    <Compile Include="FemModeling\MGRTE\2D\DataStructures\Tissues\LayerRegion.cs" />
+    <Compile Include="FemModeling\MGRTE\2D\DataStructures\Tissues\MultiLayerTissue.cs" />
     <Compile Include="FemModeling\MGRTE\2D\Factory\FemSourceFactory.cs" />
+    <Compile Include="FemModeling\MGRTE\2D\Factory\TissueFactory.cs" />
     <Compile Include="FemModeling\MGRTE\2D\Interfaces\IDetectorInputs.cs" />
+    <Compile Include="FemModeling\MGRTE\2D\Interfaces\IInclusionInput.cs" />
+    <Compile Include="FemModeling\MGRTE\2D\Interfaces\IInclusionRegion.cs" />
+    <Compile Include="FemModeling\MGRTE\2D\Interfaces\ITissue.cs" />
     <Compile Include="FemModeling\MGRTE\2D\Interfaces\ITissueInput.cs" />
     <Compile Include="FemModeling\MGRTE\2D\Interfaces\IIntFemSourceInput.cs" />
     <Compile Include="FemModeling\MGRTE\2D\Interfaces\IIntSource.cs" />
@@ -204,6 +214,7 @@
     <Compile Include="FemModeling\MGRTE\2D\DataStructures\SourceInputs\InternalSourceInputs\Int2DRectangularSourceInput.cs" />
     <Compile Include="FemModeling\MGRTE\2D\DataStructures\SourceInputs\InternalSourceInputs\Int2DEllipticalSourceInput.cs" />
     <Compile Include="FemModeling\MGRTE\2D\DataStructures\SourceInputs\InternalSourceInputs\Int2DCircularSourceInput.cs" />
+    <Compile Include="FemModeling\MGRTE\2D\Interfaces\ITissueRegion.cs" />
     <Compile Include="FemModeling\MGRTE\2D\Sources\ExternalSources\ExtLineSource.cs" />
     <Compile Include="FemModeling\MGRTE\2D\Sources\ExternalSources\ExtPointSource.cs" />
     <Compile Include="FemModeling\MGRTE\2D\Sources\InternalSources\Int2DCircularSource.cs" />
@@ -298,9 +309,7 @@
     <Compile Include="Modeling\ForwardSolvers\INurbs.cs" />
     <Compile Include="Modeling\ForwardSolvers\LinearDiscreteFourierTransform.cs" />
     <Compile Include="Modeling\ForwardSolvers\LinearDiscreteHankelTransform.cs" />
-    <Compile Include="FemModeling\MGRTE\2D\DataStructures\MeshInputs\AngularMesh.cs" />
     <Compile Include="FemModeling\MGRTE\2D\DataStructures\Measurement.cs" />
-    <Compile Include="FemModeling\MGRTE\2D\DataStructures\MeshInputs\SpatialMesh.cs" />
     <Compile Include="FemModeling\MGRTE\2D\Enums.cs" />
     <Compile Include="FemModeling\MGRTE\2D\Initialization.cs" />
     <Compile Include="FemModeling\MGRTE\2D\MathFunctions.cs" />
