--- a/src/Vts.SiteVisit/Vts.SiteVisit.csproj
+++ b/src/Vts.SiteVisit/Vts.SiteVisit.csproj
@@ -178,7 +178,8 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
     </Compile>
-    <Compile Include="ViewModel\Application\Panels\FemSolverViewModel.cs" />
+    <Compile Include="ViewModel\Application\Panels\FemModeling\MGRTE\2D\FemSimulationInputViewModel.cs" />
+    <Compile Include="ViewModel\Application\Panels\FemModeling\MGRTE\2D\FemSolverViewModel.cs" />
     <Compile Include="ViewModel\Application\Panels\MeshViewModel.cs" />
     <Compile Include="ViewModel\Application\Panels\MonteCarlo\MultiRegionTissueViewModel.cs" />
     <Compile Include="ViewModel\Application\Panels\MonteCarlo\SingleEllipsoidTissueViewModel.cs" />
