--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -1277,7 +1277,7 @@
   </Target>
   -->
   <PropertyGroup>
-    <PostBuildEvent Condition=" '$(OS)' == 'Windows_NT' ">IF NOT EXIST "$(SolutionDir)..\build\core\Desktop\$(ConfigurationName)" mkdir "$(SolutionDir)..\build\core\Desktop\$(ConfigurationName)"
-copy "$(TargetDir)\*.*" "$(SolutionDir)..\build\core\Desktop\$(ConfigurationName)" /y</PostBuildEvent>
+    <PostBuildEvent Condition=" '$(OS)' == 'Windows_NT' ">IF NOT EXIST "$(ProjectDir)..\..\build\core\Desktop\$(ConfigurationName)" mkdir "$(ProjectDir)..\..\build\core\Desktop\$(ConfigurationName)"
+copy "$(TargetDir)\*.*" "$(ProjectDir)..\..\build\core\Desktop\$(ConfigurationName)" /y</PostBuildEvent>
   </PropertyGroup>
 </Project>
