--- a/src/Vts.SiteVisit/Vts.SiteVisit.csproj
+++ b/src/Vts.SiteVisit/Vts.SiteVisit.csproj
@@ -530,11 +530,7 @@
     </VisualStudio>
   </ProjectExtensions>
   <PropertyGroup>
-    <PostBuildEvent Condition=" '$(OS)' == 'Windows_NT' ">IF NOT EXIST "$(SolutionDir)..\build\apps\gui\Desktop\$(ConfigurationName)\" mkdir "$(SolutionDir)..\build\apps\gui\Desktop\$(ConfigurationName)\"
-copy "$(TargetDir)*.*" "$(SolutionDir)..\build\apps\gui\Desktop\$(ConfigurationName)\" /y</PostBuildEvent>
-  </PropertyGroup>
-  <PropertyGroup>
-    <PostBuildEvent>IF NOT EXIST "$(SolutionDir)..\build\apps\gui_silverlight\$(ConfigurationName)\" mkdir "$(SolutionDir)..\build\apps\gui_silverlight\$(ConfigurationName)\"
-copy "$(TargetDir)*.*" "$(SolutionDir)..\build\apps\gui_silverlight\$(ConfigurationName)\" /y</PostBuildEvent>
+    <PostBuildEvent Condition=" '$(OS)' == 'Windows_NT' ">IF NOT EXIST "$(ProjectDir)..\..\build\apps\gui_silverlight\$(ConfigurationName)\" mkdir "$(ProjectDir)..\..\build\apps\gui_silverlight\$(ConfigurationName)\"
+copy "$(TargetDir)*.*" "$(ProjectDir)..\..\build\apps\gui_silverlight\$(ConfigurationName)\" /y</PostBuildEvent>
   </PropertyGroup>
 </Project>
