added tests for Mie scattering
--HG--
branch : jn-111104-lookup_phase_function

--- a/src/Vts.Test/Vts.Test.csproj
+++ b/src/Vts.Test/Vts.Test.csproj
@@ -212,6 +212,7 @@
     <Compile Include="Modeling\Spectroscopy\ChromophoreSpectrumTests.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Modeling\Spectroscopy\MieScattererTests.cs" />
     <Compile Include="Modeling\Spectroscopy\SpectralConverterTests.cs">
       <SubType>Code</SubType>
     </Compile>
