--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -243,6 +243,11 @@
     <Compile Include="MonteCarlo\DataStructures\DetectorInputs\ROfFxDetectorInput.cs" />
     <Compile Include="MonteCarlo\DataStructures\DetectorInputs\RadianceOfRhoAndZAndAngleDetectorInput.cs" />
     <Compile Include="MonteCarlo\DataStructures\DetectorInputs\RadianceOfRhoDetectorInput.cs" />
+    <Compile Include="MonteCarlo\DataStructures\PhaseFunctionInputs\BidirectionalPhaseFunctionInput.cs" />
+    <Compile Include="MonteCarlo\DataStructures\PhaseFunctionInputs\PolarAndAzimuthalLookupTablePhaseFunctionData.cs" />
+    <Compile Include="MonteCarlo\DataStructures\PhaseFunctionInputs\HenyeyGreensteinPhaseFunctionInput.cs" />
+    <Compile Include="MonteCarlo\DataStructures\PhaseFunctionInputs\LookupTablePhaseFunctionInput.cs" />
+    <Compile Include="MonteCarlo\DataStructures\PhaseFunctionInputs\PolarLookupTablePhaseFunctionData.cs" />
     <Compile Include="MonteCarlo\DataStructures\PostProcessorInputs\PostProcessorInput.cs" />
     <Compile Include="MonteCarlo\DataStructures\PostProcessorInputs\PostProcessorInputProvider.cs" />
     <Compile Include="MonteCarlo\DataStructures\SimulationInputProvider.cs" />
@@ -269,6 +274,7 @@
     <Compile Include="MonteCarlo\Extensions\ITissueRegionExtensions.cs" />
     <Compile Include="MonteCarlo\Factories\DatabaseWriterFactory.cs" />
     <Compile Include="MonteCarlo\Factories\DetectorControllerFactory.cs" />
+    <Compile Include="MonteCarlo\Factories\PhaseFunctionFactory.cs" />
     <Compile Include="MonteCarlo\Factories\PhotonDatabaseFactory.cs" />
     <Compile Include="MonteCarlo\Factories\SourceFactory.cs">
       <SubType>Code</SubType>
@@ -277,8 +283,14 @@
     <Compile Include="MonteCarlo\Helpers\SourceProfiles\ArbitrarySourceProfile.cs" />
     <Compile Include="MonteCarlo\Interfaces\IHistoryDetector.cs" />
     <Compile Include="MonteCarlo\Interfaces\IDetectorController.cs" />
+    <Compile Include="MonteCarlo\Interfaces\ILookupTablePhaseFunctionData.cs" />
+    <Compile Include="MonteCarlo\Interfaces\IPhaseFunction.cs" />
+    <Compile Include="MonteCarlo\Interfaces\IPhaseFunctionInput.cs" />
     <Compile Include="MonteCarlo\Interfaces\IVirtualBoundary.cs" />
     <Compile Include="MonteCarlo\Extensions\PhotonDataExtensionMethods.cs" />
+    <Compile Include="MonteCarlo\PhaseFunctions\BidirectionalPhaseFunction.cs" />
+    <Compile Include="MonteCarlo\PhaseFunctions\HenyeyGreensteinPhaseFunction.cs" />
+    <Compile Include="MonteCarlo\PhaseFunctions\LookupTablePhaseFunction.cs" />
     <Compile Include="MonteCarlo\Rng\MersenneTwisterSerializationInfo.cs" />
     <Compile Include="MonteCarlo\Rng\SerializableMersenneTwister.cs" />
     <Compile Include="Factories\ComputationFactory.cs" />
