--- a/.hgignore
+++ b/.hgignore
@@ -18,6 +18,7 @@ syntax: glob
 *.nlb
 *.clw
 *.pdb
+*.pidb
 *.tlb
 *.tlh
 *.bak
@@ -29,6 +30,9 @@ syntax: glob
 *.scc
 *.sig
 *.asv
+*.userprefs
+*.xap
+*.zip
 [Bb]in
 [Cc]lient[Bb]in
 [Dd]ebug*/
