Added renamed SourceInputs to Vts.Desktop.csproj MCCL Program: uncommented lines that generate SourceInputs xml. Added Vts.Desktop to MCCL references (somehow got removed). Played around with commenting in/out some of SourceInputProvider to debug.  Reset file back to its original state.
--HG--
branch : mono-compatibility

--- a/src/Vts.MonteCarlo.CommandLineApplication/Vts.MonteCarlo.CommandLineApplication.csproj
+++ b/src/Vts.MonteCarlo.CommandLineApplication/Vts.MonteCarlo.CommandLineApplication.csproj
@@ -155,4 +155,10 @@ copy "$(TargetDir)\*.*" "$(ProjectDir)..\..\build\apps\mc\$(ConfigurationName)" 
 "$(TargetDir)mc.exe" geninfiles
 </PostBuildEvent>
   </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Vts.Desktop\Vts.Desktop.csproj">
+      <Project>{05B6020A-B646-4BBB-B9A0-B524F5F85023}</Project>
+      <Name>Vts.Desktop</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
